REST webszolgáltatások POST és DELETE művelet